--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,17 @@
     "generate-client": "openapi-ts --input http://localhost:5000/openapi.json --output ./src/client --client axios --base http://localhost:5000"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "axios": "^1.7.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.390.0",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@hey-api/openapi-ts": "^0.46.3",
