--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,12 +9,12 @@ packages = [{include = "task_mgmt_app_backend"}]
 [tool.poetry.dependencies]
 python = "^3.11"
 sqlalchemy = "^2.0.30"
-psycopg2 = "^2.9.9"
 python-dotenv = "^1.0.1"
 fastapi = "^0.111.0"
 python-multipart = "^0.0.9"
 pyjwt = {extras = ["crypto"], version = "^2.8.0"}
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
+psycopg2-binary = "^2.9.9"
 
 
 [build-system]
