--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,12 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "generate-client": "openapi-ts --input http://localhost:5000/openapi.json --output ./src/client --client axios --base http://localhost:5000"
+    "generate-client": "openapi-ts --input http://localhost:5000/openapi.json --output ./src/client"
   },
   "dependencies": {
+    "@hey-api/client-fetch": "^0.1.3",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "axios": "^1.7.2",
@@ -17,6 +20,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.390.0",
     "next": "14.2.3",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.3.0",
