--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "generate-client": "openapi-ts --input http://localhost:5000/openapi.json --output ./src/client"
+    "generate-client": "openapi-ts --input http://localhost:5000/openapi.json --output ./src/client --client axios --base http://localhost:5000"
   },
   "dependencies": {
     "@hey-api/client-fetch": "^0.1.3",
@@ -23,6 +23,7 @@
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
